# open-manus-lite

./: LICENSE  README.md  main.py  pyproject.toml
config/: config.example.toml
src/: config_loader.py
